Update portfolio website with background image, centered resume section, and simplified contact form
- Replace blue overlay with tech-projects-bg.jpg background image
- Reduce portfolio items to 3 squares in My Work section
- Update YouTube portfolio item to use Yahoo.webp image
- Remove Key Highlights section from resume
- Center resume section with full viewport height
- Remove contact form, keep only LinkedIn, YouTube, and email links
- Center contact information layout

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
                 <p class="section-subtitle">Developer, Content Creator & Problem Solver</p>
             </div>
             <div class="about-content">
+
                 <div class="about-text-full">
                     <p>
                         Hi, I'm Osayande (Daniel) Omoregie a developer, content creator, and problem solver passionate about technology and storytelling. Currently studying Computer Science at the University of Houston, I've built solutions ranging from operational software for NASA's International Space Station to web dashboards supporting hundreds of users in education. At NASA, I not only contributed production level code but also took on product management and scrum master responsibilities, setting the long-term vision for the Fire Port auto-scaling project by outlining goals, defining features, and guiding how it would evolve over time. The result was a solution that reduced manual adjustments by more than 90% while improving usability for astronauts.
@@ -151,10 +152,15 @@
                 <div class="portfolio-grid">
                     <div class="portfolio-item" data-category="content">
                         <div class="portfolio-image">
+                            <img src="/Users/daniel/Downloads/Yahoo.webp" alt="YouTube Channel - NASA & UH Content" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>YouTube Channel</h3>
-                                    <p>Personal lifestyle and professional content</p>
+                                    <p>Tech insights, NASA experiences & college life</p>
+                                    <div class="portfolio-stats">
+                                        <span class="stat">320K+ Views</span>
+                                        <span class="stat">@filmedbydaniel</span>
+                                    </div>
                                     <a href="https://www.youtube.com/@filmedbydaniel" target="_blank" class="portfolio-link">
                                         <i class="fab fa-youtube"></i>
                                         View Channel
@@ -165,6 +171,7 @@
                     </div>
                     <div class="portfolio-item" data-category="leadership">
                         <div class="portfolio-image">
+                            <img src="assets/leadership-bg.jpg" alt="Leadership Initiatives" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>Leadership Initiatives</h3>
@@ -179,6 +186,7 @@
                     </div>
                     <div class="portfolio-item" data-category="technology">
                         <div class="portfolio-image">
+                            <img src="assets/tech-projects-bg.jpg" alt="Technical Projects" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>Technical Projects</h3>
@@ -186,20 +194,6 @@
                                     <a href="#contact" class="portfolio-link">
                                         <i class="fas fa-code"></i>
                                         View Details
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="portfolio-item" data-category="leadership">
-                        <div class="portfolio-image">
-                            <div class="portfolio-overlay">
-                                <div class="portfolio-content">
-                                    <h3>Internship Experience</h3>
-                                    <p>Professional growth and development</p>
-                                    <a href="#resume" class="portfolio-link">
-                                        <i class="fas fa-file-pdf"></i>
-                                        View Resume
                                     </a>
                                 </div>
                             </div>
@@ -229,18 +223,6 @@
                             <span>Download PDF</span>
                             <i class="fas fa-download"></i>
                         </a>
-                    </div>
-                </div>
-                <div class="resume-preview">
-                    <div class="preview-card">
-                        <h4>Key Highlights</h4>
-                        <ul class="highlight-list">
-                            <li>Proven leadership experience in diverse environments</li>
-                            <li>Strong technical background with modern technologies</li>
-                            <li>Excellent communication and team collaboration skills</li>
-                            <li>Track record of successful project delivery</li>
-                            <li>Continuous learning and professional development</li>
-                        </ul>
                     </div>
                 </div>
             </div>
@@ -286,30 +268,6 @@
                             <a href="mailto:omoregiebusiness@gmail.com">omoregiebusiness@gmail.com</a>
                         </div>
                     </div>
-                </div>
-                <div class="contact-form">
-                    <form class="form">
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" required>
-                            <label for="name">Name</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" required>
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="text" id="subject" name="subject" required>
-                            <label for="subject">Subject</label>
-                        </div>
-                        <div class="form-group">
-                            <textarea id="message" name="message" rows="5" required></textarea>
-                            <label for="message">Message</label>
-                        </div>
-                        <button type="submit" class="btn btn-primary">
-                            <span>Send Message</span>
-                            <i class="fas fa-paper-plane"></i>
-                        </button>
-                    </form>
                 </div>
             </div>
         </div>
