update to the picture boxes, also updated the resume tab by replacing it with the overleaf URL

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#1E3A8A">
+    <meta name="apple-mobile-web-app-title" content="Daniel Omoregie">
     <title>Daniel Omoregie - Portfolio</title>
     <meta name="description" content="Daniel Omoregie's professional portfolio showcasing leadership, innovation, and creative excellence.">
     <meta name="keywords" content="Daniel Omoregie, portfolio, leadership, innovation, technology, YouTube, LinkedIn">
@@ -152,7 +156,7 @@
                 <div class="portfolio-grid">
                     <div class="portfolio-item" data-category="content">
                         <div class="portfolio-image">
-                            <img src="/Users/daniel/Downloads/Yahoo.webp" alt="YouTube Channel - NASA & UH Content" class="portfolio-bg-image">
+                            <img src="assets/Yahoo.webp" alt="YouTube Channel - NASA & UH Content" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>YouTube Channel</h3>
@@ -171,7 +175,7 @@
                     </div>
                     <div class="portfolio-item" data-category="leadership">
                         <div class="portfolio-image">
-                            <img src="assets/leadership-bg.jpg" alt="Leadership Initiatives" class="portfolio-bg-image">
+                            <img src="assets/leadership-screenshot.png" alt="Leadership Initiatives - BLACK MEN Organization" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>Leadership Initiatives</h3>
@@ -186,14 +190,14 @@
                     </div>
                     <div class="portfolio-item" data-category="technology">
                         <div class="portfolio-image">
-                            <img src="assets/tech-projects-bg.jpg" alt="Technical Projects" class="portfolio-bg-image">
+                            <img src="assets/tech-projects-screenshot.png" alt="Technical Projects" class="portfolio-bg-image">
                             <div class="portfolio-overlay">
                                 <div class="portfolio-content">
                                     <h3>Technical Projects</h3>
                                     <p>Innovative solutions and applications</p>
-                                    <a href="#contact" class="portfolio-link">
-                                        <i class="fas fa-code"></i>
-                                        View Details
+                                    <a href="https://github.com/Danielomoregie/" target="_blank" class="portfolio-link">
+                                        <i class="fab fa-github"></i>
+                                        View on GitHub
                                     </a>
                                 </div>
                             </div>
@@ -217,11 +221,11 @@
                         <div class="download-icon">
                             <i class="fas fa-file-pdf"></i>
                         </div>
-                        <h3>Download Resume</h3>
-                        <p>Get a comprehensive view of my professional experience, skills, and achievements.</p>
-                        <a href="/Users/daniel/Downloads/RSMEomoregie (14).pdf" download class="btn btn-primary">
-                            <span>Download PDF</span>
-                            <i class="fas fa-download"></i>
+                        <h3>View Resume & Code</h3>
+                        <p>Explore my resume and see the LaTeX code behind it. Click to view on Overleaf.</p>
+                        <a href="https://www.overleaf.com/read/yvyhnkqjygpf#573c65" target="_blank" class="btn btn-primary">
+                            <span>View on Overleaf</span>
+                            <i class="fas fa-external-link-alt"></i>
                         </a>
                     </div>
                 </div>
